# server/service/Services/TransactionService.cs
@@ -1,21 +1,26 @@
 using System.Collections.Generic;
 using System.Linq;
 using System.Threading.Tasks;
+using Contracts;
 using Contracts.TransactionDTOs;
 using dataaccess.Entities;
+using Microsoft.EntityFrameworkCore;
 using Service.Repositories;
 using service.Mappers;
 using service.Services.Interfaces;
+using Sieve.Services;
 
 namespace service.Services;
 
 public class TransactionService : Service<Transaction>, ITransactionService
 {
     private readonly ITransactionRepository _transactionRepository;
+    private readonly ISieveProcessor _sieveProcessor;
 
-    public TransactionService(ITransactionRepository transactionRepository) : base(transactionRepository)
+    public TransactionService(ITransactionRepository transactionRepository, ISieveProcessor sieveProcessor) : base(transactionRepository)
     {
         _transactionRepository = transactionRepository;
+        _sieveProcessor = sieveProcessor;
     }
 
     public async Task<IEnumerable<TransactionDto>> GetAllAsync()
@@ -56,6 +61,23 @@ public class TransactionService : Service<Transaction>, ITransactionService
         await _transactionRepository.SaveChangesAsync();
 
         return TransactionMapper.ToDto(existing);
+    }
+
+    public async Task<PagedResult<TransactionDto>> getAllByUserIdAsync(string userId, TransactionQueryParameters? parameters)
+    {
+        var query = _transactionRepository.AsQueryable();
+        var sieveModel = parameters ?? new TransactionQueryParameters();
+        var totalCount = await query.CountAsync();
+        var processedQuery = _sieveProcessor.Apply(sieveModel, query);
+        var transactions = await processedQuery.ToListAsync();
+
+        return new PagedResult<TransactionDto>
+        {
+            Items = transactions.Select(TransactionMapper.ToDto).ToList(), // toList quickfix until getAllAsync is fixed
+            TotalCount = totalCount,
+            Page = sieveModel.Page ?? 1,
+            PageSize = sieveModel.PageSize ?? transactions.Count
+        };
     }
 
     public async Task<bool> DeleteAsync(string id)
